--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Wheely</string>
-    <string name="auth_hint_email">Укажите рабочую почту</string>
-    <string name="auth_hint_password">Личный код</string>
+    <string name="auth_hint_user_name">User name</string>
+    <string name="auth_hint_password">Password</string>
+    <string name="auth_action_text">SIGN IN</string>
 </resources>
