add model error, snackbar, google maps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="auth_hint_password">Password</string>
     <string name="auth_action_sign_in">SIGN IN</string>
     <string name="menu_action_sign_out">SIGN OUT</string>
+    <string name="google_maps_key">AIzaSyAP0ZbbmMidhW0vLF7keCDBMmsIgRKNoKc</string>
+
+    <string name="model_error_location_permission">Резрешите приложению использовать GPS</string>
+    <string name="model_error_location_permission_action">НАСТРОЙКИ</string>
+    <string name="model_error_unstable_network_connection">Нестабильное соединение с сетью</string>
+    <string name="model_error_no_any_network_connection">Проверьте подключение к интернету</string>
+    <string name="model_error_unknown_error">Неизвестная ошибка :(</string>
+    <string name="model_error_unknown_error_action">OKAY</string>
 </resources>
